# nlp-cloud-manager

./: .gitignore  README.md  docker-compose.yml
backend/aws/: README.md  package.json
backend/aws/src/: app.module.ts
backend/aws/src/billing/: billing.controller.ts  billing.module.ts  billing.service.ts
backend/aws/src/config/: configuration.ts  typed-config.module.ts  typed-config.service.ts
backend/aws/src/database/: database.module.ts
backend/azure/: README.md  main.py  models.py  pyproject.toml
backend/base/: Dockerfile  package.json
backend/base/src/: app.controller.ts  app.module.ts  dashboard-layout.entity.ts
backend/gcp/: README.md  database.py  main.py  models.py  pyproject.toml
backend/sample/: Dockerfile  package.json
backend/sample/src/: app.controller.ts  main.ts
frontend/: Dockerfile  README.md  package.json  pnpm-workspace.yaml
frontend/services/aws/: Dockerfile  package.json  tsconfig.node.json  vite.config.ts
frontend/services/aws/src/: App.svelte  main.ts
frontend/services/azure/: index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/services/azure/src/: app.css
frontend/services/gcp/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/services/gcp/src/: App.svelte  app.css  main.ts
frontend/services/sample/: package.json  vite.config.ts
frontend/shared/theme/: theme.css
frontend/src/: app.css
frontend/src/lib/: api.ts  search.svelte.ts  theme.svelte.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
mcp/: main.py  pyproject.toml
(+36 files in other folders)
